Integrate notifications BB, add support of internal APIs and Internal-API-Key. Implement reminder notifications internal API. Remove cache
