# docs/swagger.json
@@ -230,6 +230,25 @@
                 }
             }
         },
+        "/int/process_reminders": {
+            "post": {
+                "security": [
+                    {
+                        "InternalAPIAuth": []
+                    }
+                ],
+                "description": "Process reminders. Invoked by AWS Scheduler API",
+                "tags": [
+                    "Internal"
+                ],
+                "operationId": "ProcessReminders",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/user/todo_entries/clear_completed_entries": {
             "delete": {
                 "security": [
@@ -277,6 +296,11 @@
             "type": "apiKey",
             "name": "Authorization",
             "in": "header (add Bearer prefix to the Authorization value)"
+        },
+        "InternalAPIAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header (add INTERNAL-API-KEY header with an appropriate value)"
         },
         "UserAuth": {
             "type": "apiKey",
